# hcurand

./: LICENSE  README.md  hcurand.cabal
src/Foreign/CUDA/: CuRAND.hsc
