name:                hcurand
version:             0.1.0.0
synopsis:            FFI bindings to the CuRAND host API
description:         Please see README.md
homepage:            https://github.com/alexisVallet/hcurand
license:             BSD3
license-file:        LICENSE
author:              Alexis Vallet
maintainer:          alexis.vallet@gmail.com
-- copyright:           
category:            Foreign
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Foreign.CUDA.CuRAND
  build-depends:       base >= 4.7 && < 5
                     , cuda >= 0.6.5 && < 0.7
  default-language:    Haskell2010
  extra-libraries:     curand

source-repository head
  type:     git
  location: https://github.com/alexisVallet/hcurand
